--- a/readme2.html
+++ b/readme2.html
@@ -4,6 +4,7 @@
   <title>Mailing List Signup</title>
 </head>
 <body>
+   <img src="rosie%20poster%20copy2.png" alt="Rosie poster" />
 <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
