--- a/readme2.html
+++ b/readme2.html
@@ -4,7 +4,7 @@
   <title>Mailing List Signup</title>
 </head>
 <body>
-   <img src="rosie poster copy2.png" alt="Rosie poster" />
+   <img src="TBH_poster.png" alt="The Big Hoedown Ithaca" />
 <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
