--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mailing List Signup</title>
+  <title>THE BIG HOEDOWN - ITHACA OLD-TIME GATHERING</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
    <img src="TBH_poster.png" alt="The Big Hoedown Ithaca" />
