--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
   <meta charset="utf-8">
   <title>THE BIG HOEDOWN - ITHACA OLD-TIME GATHERING</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
    <img src="TBH_poster.png" alt="The Big Hoedown Ithaca" />
+  style="max-width:100%; height:auto; display:block; margin:0 auto;">
 <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
