--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
    <img src="TBH_poster.png" alt="The Big Hoedown Ithaca" />
-  style="max-width:100%; height:auto; display:block; margin:0 auto;">
+  style="max-width:auto; height:auto; display:block; margin:0 auto;">
 <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
