--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>THE BIG HOEDOWN - ITHACA OLD-TIME GATHERING</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
    <img src="TBH_poster.png" alt="The Big Hoedown Ithaca" />
